--- a/bieivi/css/propiosBAV.css
+++ b/bieivi/css/propiosBAV.css
@@ -1,29 +1,64 @@
-
-#mainNav .navbar-nav .nav-item .nav-link {
-    font-family: 'Quicksand', sans-serif,"Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-    font-size: 1.2rem;
-    color: #fff;
-    letter-spacing: 0.0625em;
-}
-
-#mainNav .navbar-brand img {
-    height: 5rem;
-    
-}
-.navbar-brand svg, #mainNav.navbar-shrink .navbar-brand img {
-    height: 3.5rem;
-}
-
-#mainNav .navbar-nav .nav-item .nav-link.active, #mainNav .navbar-nav .nav-item .nav-link:hover {
-    color: #FF7400;
-}
-
-#mainNav .navbar-toggler {
-    padding: 0.75rem;
-    font-family: 'Quicksand', sans-serif, "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-    font-size: 1.75rem;
-    color: #399271;
-    text-transform: uppercase;
+header {
     background-color: #073763;
-    border: 0;
+    width: 100%;
+    height: 40px;
+}
+nav {
+    background-color: #073763;
+    width: 100%;
+    height: 100px;
+
+}
+.navbar-light .navbar-nav .nav-link {
+  color:  #FF7400;
+  font-size: 20px;
+}
+
+
+h1 {
+  color: #073763;
+  font-size: 2,5rem;
+  text-align: center;
+  font-family: quicksand;
+  margin-top: 30px;
+  margin-bottom: 20px;
+}
+
+h2{
+    color: #399271;
+    font-size: 2rem;
+    text-align: center;
+    font-family: quicksand;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+h3{
+  color: #073763;
+  font-size: 1,5rem;
+  text-align: center;
+  font-family: quicksand;
+}
+
+p{
+    color: black;
+    font-size: 1rem;
+    font-family: open sans;
+}
+
+.card{
+    border: 1px solid #FF7400;
+}
+
+iframe{
+    border: 1px solid #FF7400;
+}
+
+footer {
+    background-color: #073763;
+    width: 100%;
+}
+
+.about {
+  margin: 300px 100px 100px 100px;
 }
