--- a/bieivi/css/stylesNavBootrap.css
+++ b/bieivi/css/stylesNavBootrap.css
@@ -1,5 +1,3 @@
-
-
 *,
 *::before,
 *::after {
@@ -123,7 +121,7 @@ a {
   background-color: transparent;
 }
 a:hover {
-  color: #0105e6;
+  color: #ffffff;
   text-decoration: underline;
 }
 
