--- a/bieivi/css/base.css
+++ b/bieivi/css/base.css
@@ -71,10 +71,11 @@ h4 {
 
 h5 {
   color: #399271;
-  font-size: 1.5rem;
+  font-size: 1.05rem;
   text-align: center;
   margin-top: 30px;
   margin-bottom: 20px;
+  font-weight: 700;
 }
 
 p{
@@ -93,28 +94,30 @@ footer {
 }
 
 .proyectos {
- 
-  background-color: #073763;
   margin: 0 auto;
-  width: 1000px;
-  height: 1660px;
+  width: 100%;
 }
 
 .pildoras {
-  background-color: #073763;
   margin: 0 auto;
-  width: 1000px;
-  height: 700px;
+  width: 100%;
 }
 
 .container{
-  margin-left: 170px;
-  margin-right: 200px;
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  padding-top: 56.25%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
 }
 
-iframe{
-  width:660px;
-  height:400px;
+.responsive-iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
   border: 3px solid #FF7400;
 }
 
