--- a/bieivi/css/base.css
+++ b/bieivi/css/base.css
@@ -90,7 +90,15 @@ p{
 footer {
     background-color: #073763;
     width: 100%;
+    height: 100px;
     color: #ffffff;
+    text-align: center;
+    margin-top: 50px;
+}
+
+.footer-info {
+  width: 100%;
+  text-align: center;
 }
 
 .proyectos {
@@ -243,4 +251,6 @@ button>a>img {
   float: left;
   width: 20%;
  }
+
+
 
