--- a/bieivi/css/base.css
+++ b/bieivi/css/base.css
@@ -87,19 +87,6 @@ p{
     border: 3px solid #FF7400;
 }
 
-footer {
-    background-color: #073763;
-    width: 100%;
-    color: #ffffff;
-    margin-top: 50px;
-}
-
-.footer-info {
-  width: 100%;
-  height: 50px;
-
-}
-
 .proyectos {
   margin: 0 auto;
   width: 100%;
@@ -250,6 +237,149 @@ button>a>img {
   float: left;
   width: 20%;
  }
+.comments {
+  margin-top: 100px;
+}
 
 
+/*Contacta con nosotros*/
+
+.contact {
+  width: 90%;
+  margin-top: 100px;
+  margin-left: 100px;
+}
+
+input .form-control {
+  width: 100px;
+  padding: 5px;
+  box-sizing: border-box;
+  font-size: 10px;
+  
+}
+
+input .textarea {
+  padding: 3px;
+  box-sizing: border-box;
+  font-size: 17px;
+  border-radius: 7px;
+  max-width: 50%;
+  
+}
+
+textarea  {
+  min-height: 155px;
+  max-height: 200px;
+  max-width: 95%;
+}
+
+/*Footer*/
+
+footer {
+  background-color: #073763;
+  width: 100%;
+  color: #399271;
+  margin-top: 30px;
+  text-align: center;
+  font-size: 0.95;
+  padding: 5px 5px;
+}
+
+.footer-info { 
+  width: 100%;
+  position: relative;
+  
+}
+
+/*icono de instagram*/
+
+div .social-icon i {
+  margin-top: 20px;
+  font-size: 40px;
+  padding: 5px;
+  width: 60px;
+  height: 60px; 
+  text-align: center;
+  line-height: 45px;
+  border-radius: 50%;
+  border:2px solid #399271;
+  -webkit-box-shadow:inset 0 0 15px 0 rgba(0,0,0,0.3);
+  box-shadow:inset 0 0 15px 0 rgba(0,0,0,0.3);
+  text-shadow: 0 1px 0 rgba(255,255,255,0.3);
+  }
+
+/*Déjanos tu Comentario*/
+
+textarea {
+  overflow: hidden;
+  resize: none;
+  margin: 0 auto;
+  width: 75%;
+}
+
+.comments-textarea .form-contro .col-lg-6{
+  display: none;
+  padding: 3px;
+  font-size: 17px;
+  border-radius: 10px;
+  border-color: internal-light-dark(rgb(76, 177, 245), white);
+  margin-bottom: 3rem;
+}
+
+div .row{
+  padding: 50px;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: auto;
+  left: auto;
+}
+
+
+
+@media (min-width: 0) {
+  .g-mr-15 {
+      margin-right: 1.07143rem !important;
+  }
+}
+
+@media (min-width: 0){
+    .g-mt-3 {
+        margin-top: 0.21429rem !important;
+    }
+}
+
+.g-height-50 {
+    height: 50px;
+}
+
+.g-width-50 {
+    width: 50px !important;
+}
+
+@media (min-width: 0){
+    .g-pa-30 {
+        padding: 2.14286rem !important;
+    }
+}
+
+.g-bg-secondary {
+    background-color: #DDDD!important;
+    border-radius: 7PX;
+}
+
+.u-shadow-v18 {
+    box-shadow: 0 5px 10px -6px rgba(0, 0, 0, 0.15);
+}
+
+.g-color-gray-dark-v4 {
+    color: #5A5A5A !important;
+}
+
+.g-font-size-12 {
+    font-size: 0.85714rem !important;
+}
+
+.media-comment {
+    margin-top:20px
+}
 
