--- a/bieivi/css/base.css
+++ b/bieivi/css/base.css
@@ -24,15 +24,39 @@ nav {
 
 .navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover {
   color: #FFFFFF;
+
 }
 
-a {
-  color: #ffffff;
-  text-decoration: none;
+.dropdown-menu {
+ 
+  background-color: #073763;
+  
+
+}
+.navbar-toggler{
+  background-color: #FF7400;
+}
+.navbar-toggler-icon{
+  background-color: #FF7400;
+}
+
+.dropdown-item{
+  color: white;
 }
 
 a:visited{
  color: #FF7400;
+}
+#navbarDropdownMenuLink{
+  background-color: #073763;
+  width: 200px;
+  margin-right: 50px;
+}
+.nav-link{
+  background-color: #073763;
+  width: 200px;
+  padding-left: 30px;
+  
 }
 
 
@@ -47,18 +71,19 @@ h1 {
 
 h2{
     color: #399271;
-    font-size: 2rem;
+    font-size: 3.5rem;
     text-align: center;
     margin-top: 20px;
     margin-bottom: 20px;
+    margin-top: 50px;
 }
 
 h3{
   color: #FF7400;
-  font-size: 1.75rem;
+  font-size: 2.5rem;
   text-align: center;
   margin-top: 20px;
-  margin-bottom: 20px;
+  margin-bottom: 50px;
 }
 
 h4 {
@@ -71,7 +96,7 @@ h4 {
 
 h5 {
   color: #399271;
-  font-size: 1.05rem;
+  font-size: 1.5rem;
   text-align: center;
   margin-top: 30px;
   margin-bottom: 20px;
@@ -80,11 +105,18 @@ h5 {
 
 p{
     color: black;
-    font-size: 1rem;
+    font-size: 1.5rem;
+}
+.equipo{
+  
+  color: #399271;
 }
 
 .card{
     border: 3px solid #FF7400;
+}
+.card.title{
+  font-size: 1.75rem;
 }
 
 .proyectos {
@@ -118,15 +150,18 @@ p{
 .welcome{
 
   width: 1200px;
-  height: 400px;
+  
   margin-top: 90px;
  
 }
 
 
 .welcome-text {
- margin-left: 600px;
+ 
  margin-top: 100px;
+ display: flex;
+ flex-direction: column;
+ align-items: center;
 
 }
 
@@ -195,14 +230,14 @@ p{
 
 .welcome {
   width: 100%;
-  height: 900px;
+  
   margin-top: 100px;
 }
 
 .welcome>img {
   width: 20%;
   margin: auto;
-  display: block;
+  
 }
 
 .btn-ttc {
@@ -220,21 +255,19 @@ p{
 }
 
 .about {
-  margin-top: 500px;
+  
   margin-left: 100px;
   margin-right: 100px;
 }
 
-.equipo{
-  margin-top: 100px;
-}
+
 
 button>a>img {
   max-width: 100%;
 }
 
 .welcome-img{
-  float: left;
+  display: block;
   width: 20%;
  }
 .comments {
