--- a/bieivi/css/styles-nav.css
+++ b/bieivi/css/styles-nav.css
@@ -5,7 +5,7 @@
 }
 
 html {
-  font-family: sans-serif;
+  font-family: 'Quicksand', sans-serif,
   line-height: 1.15;
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
@@ -627,7 +627,7 @@ pre code {
   color: #212529;
   text-align: left;
   list-style: none;
-  background-color: #fff;
+  background-color: #073763;
   background-clip: padding-box;
   border: 1px solid rgba(0, 0, 0, 0.15);
   border-radius: 0.25rem;
