--- a/bieivi/css/base.css
+++ b/bieivi/css/base.css
@@ -129,11 +129,12 @@ p{
   width: 100%;
 }
 
-.container{
+
+.container_wireframe{
+  padding-top: 56.25%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
   position: relative;
   overflow: hidden;
   width: 100%;
-  padding-top: 56.25%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
 }
 
 .responsive-iframe {
@@ -158,20 +159,14 @@ p{
 
 .welcome-text {
  
- margin-top: 100px;
+ 
  display: flex;
  flex-direction: column;
  align-items: center;
 
 }
 
-.frase1{
-  margin: 0px 90px;
-  font-weight: bolder;
-  font-size: 70px;
-  color: black;
-  font-family: 'Quicksand', sans-serif,"Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-}
+
 
 .frase2{
   margin: 0px 100px;
@@ -185,13 +180,13 @@ p{
 /* ANIMACIÓN Y POSICIÓN DE LA IMAGEN */
 
 .welcome>img{
-  margin-top: 200px;
+  
   animation-name: mianimacion;
   animation-duration: 2s;
-  position: relative;
+  
   animation-iteration-count: 1;
   animation-fill-mode: forwards;
-
+  display: block;
   transition-duration: 1s;
   transition-timing-function: linear;
 }
@@ -213,10 +208,14 @@ p{
 
 .frase1{
   
+ 
+  font-weight: bolder;
+  font-size: 70px;
+  color: black;
+  font-family: 'Quicksand', sans-serif,"Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   display: inline-block;    
   animation: bounceInRight    ; 
-  animation-duration: 2s; 
-    
+  animation-duration: 2s;  
 }
 
 .frase2{
@@ -231,7 +230,6 @@ p{
 .welcome {
   width: 100%;
   
-  margin-top: 100px;
 }
 
 .welcome>img {
@@ -256,8 +254,7 @@ p{
 
 .about {
   
-  margin-left: 100px;
-  margin-right: 100px;
+  margin:0 auto;
 }
 
 
@@ -267,8 +264,9 @@ button>a>img {
 }
 
 .welcome-img{
-  display: block;
+  
   width: 20%;
+  margin: 200px auto 0 auto;
  }
 .comments {
   margin-top: 100px;
@@ -277,11 +275,11 @@ button>a>img {
 
 /*Contacta con nosotros*/
 
-.contact {
+/*.contact {
   width: 90%;
   margin-top: 100px;
   margin-left: 100px;
-}
+}*/
 
 input .form-control {
   width: 100px;
