--- a/bieivi/css/base.css
+++ b/bieivi/css/base.css
@@ -106,7 +106,7 @@ h5 {
 
 p{
     color: black;
-    font-size: 1rem;
+    font-size: 1.25rem;
 }
 .equipo{
   
@@ -120,16 +120,14 @@ p{
   font-size: 1.75rem;
 }
 
-.proyectos {
+.card-text{
+  font-size: 1.05rem;
+}
+
+.proyectos, .pildoras {
   margin: 0 auto;
   width: 100%;
 }
-
-.pildoras {
-  margin: 0 auto;
-  width: 100%;
-}
-
 
 .container_wireframe{
   padding-top: 56.25%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
