--- a/bieivi/css/base.css
+++ b/bieivi/css/base.css
@@ -18,12 +18,12 @@ nav {
 
 }
 .navbar-light .navbar-nav .nav-link {
-  color:  #FF7400;
+  color:  white;
   font-size: 20px;
 }
 
 .navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover {
-  color: #FFFFFF;
+  color: #FF7400;
 
 }
 
@@ -66,9 +66,9 @@ h1 {
   color: #073763;
   font-size: 3rem;
   text-align: center;
-  margin-top: 30px;
-  margin-bottom: 20px;
+    margin-bottom: 20px;
 }
+
 
 h2{
     color: #399271;
